improved search_mob sequence, added log_color.py

--- a/TODO
+++ b/TODO
@@ -1,8 +1,11 @@
 search_mob:
-  move map
-
+  selection mob  by lvl
+  improve click precision
+  next_map
 
 hit and run sequence:
+  integrate graph
+  integrate line_of_sight
   fight_placement
   pass turn
   move
